#120 USEI007 implementation on Simulator